test/valid/mutable-propassign-app.js
function f(x) { return x; }

var x = { v: 0 };

x.v = f(3);

f('a');
