test/invalid/rank-2-method-simple.js
var x = { ap: function(f) { f(); } };

var y = [];
x.ap(function() {y.push('a');});
x.ap(function() {y.push(3);});
